[gd_scene load_steps=25 format=3 uid="uid://50ubp7klhsex"]

[ext_resource type="Script" path="res://08_SUBSCENES/01_Main_Oddity/Main_oddity.gd" id="1_1fc0u"]
[ext_resource type="Script" path="res://08_SUBSCENES/01_Main_Oddity/Fusion_area_entered.gd" id="2_8cjcp"]
[ext_resource type="Script" path="res://08_SUBSCENES/01_Main_Oddity/Rotate_main.gd" id="3_fdgap"]
[ext_resource type="Script" path="res://08_SUBSCENES/01_Main_Oddity/Bounce_engine.gd" id="4_8sgwq"]
[ext_resource type="Script" path="res://08_SUBSCENES/01_Main_Oddity/Add_Element_to_spot.gd" id="4_a5au8"]
[ext_resource type="Script" path="res://08_SUBSCENES/01_Main_Oddity/Position_spots.gd" id="5_e087c"]
[ext_resource type="PackedScene" uid="uid://dwbkbudtp8nqf" path="res://08_SUBSCENES/01_Main_Oddity/00_Render_Main/Main_render_msh_01.blend" id="5_rn427"]
[ext_resource type="Shader" uid="uid://dlgbv4x8iwnwg" path="res://05_SHADER_TEST/Subscene_materials/Subscene_oddity_mirror_sh.tres" id="7_2dkjm"]
[ext_resource type="Material" uid="uid://cnldw4hovjlgd" path="res://05_SHADER_TEST/Subscene_materials/Subscene_shine_elements_mat.tres" id="9_7gobu"]
[ext_resource type="Shader" uid="uid://cx243vj1gf8pv" path="res://05_SHADER_TEST/Subscene_materials/Subscene_sh_far.tres" id="9_elclc"]

[sub_resource type="GDScript" id="GDScript_u7ou3"]
script/source = "extends Area3D

func _ready():
	_global_datas.Main_oddity_node = $Render_root

"

[sub_resource type="SphereShape3D" id="SphereShape3D_lls1c"]
radius = 0.0439911

[sub_resource type="SphereShape3D" id="SphereShape3D_tmaie"]
radius = 0.315621

[sub_resource type="SphereMesh" id="SphereMesh_ed151"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7jw6t"]
render_priority = 1
shader = ExtResource("7_2dkjm")
shader_parameter/ColorParameter2 = Color(0.294118, 0.701961, 0.458824, 1)

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_g1h3m"]
parameter_name = "ColorParameter2"

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_wr5tl"]
constant = 1.227

[sub_resource type="VisualShaderNodeFloatParameter" id="VisualShaderNodeFloatParameter_cnsrj"]
parameter_name = "Dither_size"
qualifier = 1

[sub_resource type="VisualShaderNodeExpression" id="VisualShaderNodeExpression_ev650"]
size = Vector2(724.789, 654.559)
expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"

[sub_resource type="VisualShaderNodeStep" id="VisualShaderNodeStep_yf0gn"]

[sub_resource type="VisualShaderNodeFresnel" id="VisualShaderNodeFresnel_4q2x4"]
default_input_values = [2, true, 3, 13.29]

[sub_resource type="VisualShader" id="VisualShader_evqwk"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_always, cull_back, diffuse_lambert, specular_schlick_ggx, unshaded;

uniform vec4 ColorParameter2 : source_color;



void fragment() {
// ColorParameter:2
	vec4 n_out2p0 = ColorParameter2;


// Output:0
	ALBEDO = vec3(n_out2p0.xyz);


}
"
graph_offset = Vector2(-304.092, -30.9233)
modes/depth_draw = 1
flags/unshaded = true
nodes/fragment/2/node = SubResource("VisualShaderNodeColorParameter_g1h3m")
nodes/fragment/2/position = Vector2(-140, 120)
nodes/fragment/4/node = SubResource("VisualShaderNodeFloatConstant_wr5tl")
nodes/fragment/4/position = Vector2(-1180, 640)
nodes/fragment/5/node = SubResource("VisualShaderNodeFloatParameter_cnsrj")
nodes/fragment/5/position = Vector2(-1320, 860)
nodes/fragment/6/node = SubResource("VisualShaderNodeExpression_ev650")
nodes/fragment/6/position = Vector2(-940, 800)
nodes/fragment/6/size = Vector2(724.789, 654.559)
nodes/fragment/6/input_ports = "0,0,In;1,0,Size;"
nodes/fragment/6/output_ports = "0,0,Dither_Node;"
nodes/fragment/6/expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"
nodes/fragment/7/node = SubResource("VisualShaderNodeStep_yf0gn")
nodes/fragment/7/position = Vector2(-60, 600)
nodes/fragment/8/node = SubResource("VisualShaderNodeFresnel_4q2x4")
nodes/fragment/8/position = Vector2(-420, 440)
nodes/fragment/connections = PackedInt32Array(2, 0, 0, 0, 4, 0, 6, 0, 5, 0, 6, 1, 6, 0, 7, 1, 8, 0, 7, 0)
nodes/light/0/position = Vector2(840, 240)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0aupl"]
render_priority = 1
shader = SubResource("VisualShader_evqwk")
shader_parameter/ColorParameter2 = Color(0.341176, 0.662745, 0.431373, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x05mq"]
render_priority = 0
shader = ExtResource("9_elclc")
shader_parameter/Distance_power = 0.5
shader_parameter/Distance_power2 = 1.8

[node name="Main_Oddity" type="Area3D"]
collision_layer = 4
collision_mask = 4
script = SubResource("GDScript_u7ou3")

[node name="Fusion_area_entered" type="Node" parent="."]
script = ExtResource("2_8cjcp")

[node name="Movable_Main_oddity" type="Node" parent="."]
script = ExtResource("1_1fc0u")
position_from_player = Vector3(0.25, 1.5, 0)
speed = 1.5

[node name="Rotate" type="Node" parent="Movable_Main_oddity"]
script = ExtResource("3_fdgap")

[node name="Bounce_engine" type="Node" parent="Movable_Main_oddity"]
script = ExtResource("4_8sgwq")

[node name="Timer" type="Timer" parent="Movable_Main_oddity/Bounce_engine"]
wait_time = 2.0

[node name="Random_range_update" type="Timer" parent="Movable_Main_oddity"]
wait_time = 1.5
autostart = true

[node name="Wait_before_follow" type="Timer" parent="Movable_Main_oddity"]
wait_time = 0.5
one_shot = true

[node name="Fusion_area" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="col" type="CollisionShape3D" parent="Fusion_area"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)
shape = SubResource("SphereShape3D_lls1c")

[node name="Light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0177747, 0)
layers = 4096
omni_range = 2.0

[node name="Render_light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0177747, 0)
visible = false
layers = 4
omni_range = 3.0

[node name="col" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_tmaie")

[node name="Render_root" type="Node3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="Position_spots" type="Node" parent="Render_root" node_paths=PackedStringArray("position_spots")]
script = ExtResource("5_e087c")
position_spots = [NodePath("../Pos_01"), NodePath("../Pos_02"), NodePath("../Pos_03"), NodePath("../Pos_04"), NodePath("../Pos_05"), NodePath("../Pos_06"), NodePath("../Pos_07"), NodePath("../Pos_08"), NodePath("../Pos_09"), NodePath("../Pos_10")]

[node name="Add_Element_to_spot" type="Node" parent="Render_root"]
script = ExtResource("4_a5au8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Render_root"]
transform = Transform3D(0.175218, 0, 0, 0, 0.175218, 0, 0, 0, 0.175218, 0, 0, 0)
layers = 4
mesh = SubResource("SphereMesh_ed151")
surface_material_override/0 = SubResource("ShaderMaterial_7jw6t")

[node name="Main_render_msh_01" parent="Render_root" instance=ExtResource("5_rn427")]
transform = Transform3D(0.213999, 0, 0, 0, 0.213999, 0, 0, 0, 0.213999, 0, 0, 0)

[node name="Engine_inside" parent="Render_root/Main_render_msh_01" index="0"]
transform = Transform3D(0.726563, 0, 0, 0, 0.726563, 0, 0, 0, 0.726563, 0, 0, 0)
layers = 4
surface_material_override/0 = SubResource("ShaderMaterial_0aupl")

[node name="Engine" parent="Render_root/Main_render_msh_01" index="1"]
transform = Transform3D(-0.00584793, -0.12258, -0.992441, -0.783184, -0.616523, 0.080764, -0.621763, 0.777736, -0.0923977, 0, 0, 0)
layers = 4
surface_material_override/0 = SubResource("ShaderMaterial_0aupl")
surface_material_override/1 = SubResource("ShaderMaterial_x05mq")

[node name="Center" parent="Render_root/Main_render_msh_01" index="2"]
transform = Transform3D(0.791951, 0, 0, 0, 0.791951, 0, 0, 0, 0.791951, 0, 0, 0)
visible = false
layers = 4
surface_material_override/0 = ExtResource("9_7gobu")

[node name="Pos_01" type="Node3D" parent="Render_root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0210313, -0.0338003)

[node name="Pos_02" type="Node3D" parent="Render_root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0139016, 0.039183)

[node name="Pos_03" type="Node3D" parent="Render_root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0399235, -0.00840704)

[node name="Pos_04" type="Node3D" parent="Render_root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0438976, -0.00341097, -0.00840704)

[node name="Pos_05" type="Node3D" parent="Render_root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0101563, -0.00341097, 0.0369013)

[node name="Pos_06" type="Node3D" parent="Render_root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0366673, 0.0183362, -0.0092549)

[node name="Pos_07" type="Node3D" parent="Render_root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0146613, 0.0183362, -0.0347574)

[node name="Pos_08" type="Node3D" parent="Render_root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00286014, -0.0143631, 0.0404814)

[node name="Pos_09" type="Node3D" parent="Render_root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00173094, -0.039862, -0.00953265)

[node name="Pos_10" type="Node3D" parent="Render_root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0221373, 0.0345362, -0.00297019)

[connection signal="body_entered" from="." to="Movable_Main_oddity" method="_on_movable_oddity_example_body_entered"]
[connection signal="body_exited" from="." to="Movable_Main_oddity" method="_on_movable_oddity_example_body_exited"]
[connection signal="timeout" from="Movable_Main_oddity/Bounce_engine/Timer" to="Movable_Main_oddity/Bounce_engine" method="_on_timer_timeout"]
[connection signal="timeout" from="Movable_Main_oddity/Random_range_update" to="Movable_Main_oddity" method="_on_random_range_update_timeout"]
[connection signal="timeout" from="Movable_Main_oddity/Random_range_update" to="Movable_Main_oddity/Rotate" method="_on_random_range_update_timeout"]
[connection signal="timeout" from="Movable_Main_oddity/Random_range_update" to="Movable_Main_oddity/Bounce_engine" method="_on_random_range_update_timeout"]
[connection signal="timeout" from="Movable_Main_oddity/Wait_before_follow" to="Movable_Main_oddity" method="_on_wait_before_follow_timeout"]
[connection signal="area_entered" from="Fusion_area" to="Fusion_area_entered" method="_on_fusion_area_area_entered"]

[editable path="Render_root/Main_render_msh_01"]
